Fix card overflow

--- a/src/OpenFPL_frontend/assets/css/common.scss
+++ b/src/OpenFPL_frontend/assets/css/common.scss
@@ -63,6 +63,7 @@
     padding-left: 32px;
     border-top: 1px solid #454B56;
     border-bottom: 1px solid #454B56;
+    background-color: #2E323A;
   }
 
 .table-row {
